fix footer z-index

--- a/src/components/footer/_footer.sass
+++ b/src/components/footer/_footer.sass
@@ -3,12 +3,12 @@ footer
   width: 100%
   bottom: 0
   left: 0
-  z-index: 4
+  z-index: 5
   
 .section
   &__footer
     position: absolute
-    z-index: 3
+    z-index: 5
     left: 0
     bottom: 30px
     width: 100%
